<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_jala"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choice you Best food"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_welcome" />

    <FrameLayout
        android:id="@+id/layout_input_search"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_seach"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_choice">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/search_food"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/colorTextHint"
            android:textSize="16sp"
            android:textStyle="bold" />

    </FrameLayout>

    <RadioGroup
        android:id="@+id/layout_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_search">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:checked="true"
            android:background="@drawable/background_radio_button"
            android:button="@android:color/transparent"
            android:text="@string/donut" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/background_radio_button"
            android:button="@android:color/transparent"
            android:text="@string/pink_donut" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/background_radio_button"
            android:button="@android:color/transparent"
            android:text="@string/floating" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>